@@ -2,6 +2,7 @@
 
 - TW-1596 taskwarrior can't compile FreeBSD 9.3 32bit environment (thanks to
           ribbon)
+- The 'obfuscate' setting, if set to '1' will replace all text with 'xxx'.
 
 ------ current release ---------------------------
 
